# wave

./: .gitignore  Implementation-plan.md  README.md  how-to-run.md  pyproject.toml  simulation_notebook.ipynb
configs/: default_config.yaml
src/thermal_tracker/: __init__.py  camera.py  clustering.py  config.py  eagle.py  engine.py  fusion.py  pipeline.py  rendering.py  tracking.py  voxel_grid.py  world.py
src/thermal_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wave_thermal_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_camera.py  test_config.py  test_eagle.py  test_integration.py  test_multi_eagle.py  test_rendering.py  test_tracking.py  test_voxel_grid.py  test_world.py
